[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Fonts/montserrat_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/buttons/Optionsbutton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/logo.png" type="Texture" id=6]
[ext_resource path="res://Assets/beer1.png" type="Texture" id=7]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 128.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 132.0
margin_right = 1040.0
margin_bottom = 388.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 18.0
margin_right = 518.0
margin_bottom = 78.0
scene_to_load = "res://Scenes/GameMap.tscn"

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 98.0
margin_right = 518.0
margin_bottom = 158.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 178.0
margin_right = 518.0
margin_bottom = 238.0
scene_to_load = "res://Scenes/Options.tscn"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 131.0
margin_right = 387.0
margin_bottom = 256.0
texture = ExtResource( 7 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 392.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Version 1.2.4
Osos Polares"

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false
rect_scale = Vector2( 1, 1.13339 )
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
